--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media only screen and (max-width: 985px) {
+
+    .box-container:nth-child(4),
+    .box-container:nth-child(3) {
+        margin-top: 50px;
+    }
+
+    .box .box-container:nth-child(2),
+    .box .box-container:nth-child(4) {
+        margin-right: 0;
+    }
+
+    .box {
+        width: 450px;
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    background-color: #1e1c30;
+    color: white;
+}
+
+
+
